# spam-and-ham-classifier

./: .gitignore  LICENSE  README.md  classifier.py  pyproject.toml  spam_classifier_tutorial.ipynb
.github/workflows/: build.yml
