[project]
name = "spam-or-ham-classifier"
version = "0.1.0"
description = "Email spam/ham classifier using PyTorch neural networks"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "beautifulsoup4>=4.12.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0",
    "seaborn>=0.12.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.3",
]
